...
 * @param title The title displayed at the top of the list.
 * @param events A list of VEvent items to display.
 * @param onEventClick Callback for when an event is clicked, passing the event's start date.
 */
@Composable
fun EventList(title: String, events: List<VEvent>, onEventClick: (Date) -> Unit) {
  Column(modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("list_event")) {
    // Displays the title for the list
    Text(
        text = title,
        style = MaterialTheme.typography.titleMedium,
        fontWeight = FontWeight.Bold,
        modifier = Modifier.padding(bottom = 8.dp))
...
